--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,49 +1,52 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@{
+    
+}
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Erebor</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Erebor.styles.css" asp-append-version="true" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Infraestrutura</title>
+    <link href="~/css/layout.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="~/js/layout.js"></script>
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Erebor</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+     <div class="navbar">
+        <button style="cursor: pointer;" onclick="openNav()">&#9776;</button>
+        <a href="https://github.com/re-coffee/Erebor" target="_blank" class="fa fa-github" style="font-size: 25px;"></a>
+    </div>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="cardmenu">
+            <table style="vertical-align: top;">
+                <tr>
+                    <td style="width: 50%; height: 100px;">
+                        <img src="~/Imagens/robo.png" style="height: 100%; padding-left: 20px; margin-right: 15px;" />
+                    </td>
+                    <td>
+                        <h3 style="color: white; margin-bottom: 2px; margin-top: 0px;">Bem vindo,</h3>
+                        @*<h4 style="color: white; margin-top: 2px;">@Html.Raw(Session["Login"])</h4>*@
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <a href="~/Inicio/Index" class="menuLista">Início</a>
+        @*@Html.Raw(Session["Menu"])*@
+        <a href="~/Login/Logout" class="menuLista"><i class="fa fa-sign-out"></i> Sair</a>
+        <div style="position: absolute; bottom: 60px; right: 20px; color: white; font-size: 10px; margin-top: 10px;">
+            <img src="~/Imagens/logo-footer.png" style="height: 40px;"/><br />
+            Copyright © 2022 Apdata do Brasil Software Ltda
+            <br />Todos os Direitos Reservados
+
+        </div>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Erebor - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    <div id="main">
+        @RenderBody()
+    </div>
+    
 </body>
 </html>
