--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -61,6 +61,7 @@
     padding-top: 35px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
     white-space: nowrap;
+    user-select: none;
 }
 
     /* The navigation menu links */
@@ -86,7 +87,7 @@
 .sidenav a:hover {
     color: rgba(200, 200, 200, 1);
     border-color: rgba(235, 235, 235, 1);
-    background-color: rgba(40, 40, 40, 1);
+    /*background-color: rgba(40, 40, 40, 1);*/
 }
 
 /* Position and style the close button (top right corner) */
